[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["AryeH"]

[tool.poetry.dependencies]
python = "^3.8"
celery = "5.1.2"
redis = "^4.1.4"
flower = "^1.0.0"
pytest-monitor = "^1.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^6.3.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
